# safe-gen

./: CMakeLists.txt  README.md
src/: safegen.cppm
